--- a/notebooks/julia_test.ipynb
+++ b/notebooks/julia_test.ipynb
@@ -2,20 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/GitHub/ds_p8/project_8_jl_env`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Pkg\n",
     "Pkg.activate(\"../project_8_jl_env\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using CUDA\n",
+    "\n",
+    "CUDA.versioninfo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CUDA.devices()\n"
    ]
   },
   {
