slight PEP8 adjustments, correct naming conv. for consts.

--- a/nb_cloud_execution.ipynb
+++ b/nb_cloud_execution.ipynb
@@ -20,14 +20,14 @@
    "outputs": [],
    "source": [
     "PATH = \"s3://ds-p8\"\n",
-    "PATH_Data = PATH + \"/data\"\n",
-    "PATH_Result = PATH + \"/Results\"\n",
+    "PATH_DATA = PATH + \"/data\"\n",
+    "PATH_RESULT = PATH + \"/Results\"\n",
     "\n",
     "k_components = 138\n",
     "\n",
     "print(f\"PATH = {PATH}\")\n",
-    "print(f\"PATH DATA = {PATH_Data}\")\n",
-    "print(f\"PATH Result = {PATH_Result}\")\n"
+    "print(f\"PATH DATA = {PATH_DATA}\")\n",
+    "print(f\"PATH Result = {PATH_RESULT}\")\n"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "    spark.read.format(\"binaryFile\")\n",
     "    .option(\"pathGlobFilter\", \"*.jpg\")\n",
     "    .option(\"recursiveFileLookup\", \"true\")\n",
-    "    .load(PATH_Data)\n",
+    "    .load(PATH_DATA)\n",
     ")\n"
    ]
   },
@@ -218,7 +218,8 @@
     "def featurize_series(model, content_series):\n",
     "    \"\"\"\n",
     "    Featurize a pd.Series of raw images using the input model.\n",
-    "    :return: a pd.Series of image features\n",
+    "    Returns:\n",
+    "    - pd.Series of image features\n",
     "    \"\"\"\n",
     "    input = np.stack(content_series.map(preprocess))\n",
     "    preds = model.predict(input)\n",
@@ -234,8 +235,9 @@
     "    This method is a Scalar Iterator pandas UDF wrapping our featurization function.\n",
     "    The decorator specifies that this returns a Spark DataFrame column of type ArrayType(FloatType).\n",
     "\n",
-    "    :param content_series_iter: This argument is an iterator over batches of data, where each batch\n",
-    "                              is a pandas Series of image data.\n",
+    "    Args:\n",
+    "    - content_series_iter: An iterator over batches of data, where each batch\n",
+    "    is a pandas Series of image data.\n",
     "    \"\"\"\n",
     "    # With Scalar Iterator pandas UDFs, we can load the model once and then re-use it\n",
     "    # for multiple data batches.  This amortizes the overhead of loading big models.\n",
@@ -379,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spark_vector.write.mode(\"overwrite\").parquet(PATH_Result)\n"
+    "df_spark_vector.write.mode(\"overwrite\").parquet(PATH_RESULT)\n"
    ]
   },
   {
@@ -396,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet(PATH_Result, engine=\"pyarrow\")\n"
+    "df = pd.read_parquet(PATH_RESULT, engine=\"pyarrow\")\n"
    ]
   },
   {
