--- a/notebook_local_execution.ipynb
+++ b/notebook_local_execution.ipynb
@@ -55,9 +55,9 @@
    ],
    "source": [
     "PATH = os.getcwd()\n",
-    "PATH_Data = PATH+'/data/Test1'\n",
-    "PATH_Result = PATH+'/data/Results'\n",
-    "print('PATH:'+PATH+'\\nPATH_Data:'+PATH_Data+'\\nPATH_Result: '+PATH_Result)\n"
+    "PATH_DATA = PATH+\"/data/Test1\"\n",
+    "PATH_RESULT = PATH+\"/data/Results\"\n",
+    "print(\"PATH:\" + PATH + \"\\nPATH_Data:\"+PATH_DATA + \"\\nPATH_Result: \" + PATH_RESULT)\n"
    ]
   },
   {
@@ -174,7 +174,7 @@
     "    spark.read.format(\"binaryFile\")\n",
     "    .option(\"pathGlobFilter\", \"*.jpg\")\n",
     "    .option(\"recursiveFileLookup\", \"true\")\n",
-    "    .load(PATH_Data)\n",
+    "    .load(PATH_DATA)\n",
     ")\n"
    ]
   },
@@ -1264,7 +1264,7 @@
     }
    ],
    "source": [
-    "df_spark_vector.write.mode(\"overwrite\").parquet(PATH_Result)\n"
+    "df_spark_vector.write.mode(\"overwrite\").parquet(PATH_RESULT)\n"
    ]
   },
   {
@@ -1281,7 +1281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet(PATH_Result, engine=\"pyarrow\")\n"
+    "df = pd.read_parquet(PATH_RESULT, engine=\"pyarrow\")\n"
    ]
   },
   {
