emr generation script

--- a/notebook_local_execution.ipynb
+++ b/notebook_local_execution.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Local execution :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -55,9 +63,9 @@
    ],
    "source": [
     "PATH = os.getcwd()\n",
-    "PATH_DATA = PATH+\"/data/Test1\"\n",
-    "PATH_RESULT = PATH+\"/data/Results\"\n",
-    "print(\"PATH:\" + PATH + \"\\nPATH_Data:\"+PATH_DATA + \"\\nPATH_Result: \" + PATH_RESULT)\n"
+    "PATH_DATA = PATH + \"/data/Test1\"\n",
+    "PATH_RESULT = PATH + \"/data/Results\"\n",
+    "print(\"PATH:\" + PATH + \"\\nPATH_Data:\" + PATH_DATA + \"\\nPATH_Result: \" + PATH_RESULT)\n"
    ]
   },
   {
