--- a/nb_cloud_execution.ipynb
+++ b/nb_cloud_execution.ipynb
@@ -48,7 +48,7 @@
     "from PIL import Image\n",
     "from pyspark.sql.functions import col, pandas_udf, element_at, split\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.functions import udf, PandasUDFType\n",
     "from pyspark.sql.types import ArrayType, FloatType\n",
     "from pyspark.ml.feature import PCA as spa_PCA\n",
     "from pyspark.ml.linalg import Vectors, VectorUDT, SparseVector, DenseVector\n",
@@ -229,21 +229,19 @@
     "    return pd.Series(output)\n",
     "\n",
     "\n",
-    "@pandas_udf(ArrayType(FloatType()))\n",
+    "@pandas_udf('array<float>', PandasUDFType.SCALAR_ITER)\n",
     "def featurize_udf(content_series_iter):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    This method is a Scalar Iterator pandas UDF wrapping our featurization function.\n",
     "    The decorator specifies that this returns a Spark DataFrame column of type ArrayType(FloatType).\n",
     "\n",
     "    Args:\n",
-    "    - content_series_iter: An iterator over batches of data, where each batch\n",
+    "    - content_series_iter: This argument is an iterator over batches of data, where each batch\n",
     "    is a pandas Series of image data.\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    # With Scalar Iterator pandas UDFs, we can load the model once and then re-use it\n",
     "    # for multiple data batches.  This amortizes the overhead of loading big models.\n",
-    "\n",
     "    model = model_fn()\n",
-    "\n",
     "    for content_series in content_series_iter:\n",
     "        yield featurize_series(model, content_series)\n",
     "\n"
