corrected linting issue

--- a/nb_cloud_execution.ipynb
+++ b/nb_cloud_execution.ipynb
@@ -363,10 +363,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Converting vectors back to arrays for readability\n",
     "vector_to_array_udf = udf(\n",
-    "    lambda vector: vector.toArray().tolist() \n",
-    "                  if isinstance(vector, (DenseVector, SparseVector)) \n",
-    "                  else vector, \n",
+    "    lambda vector: vector.toArray().tolist()\n",
+    "    if isinstance(vector, (DenseVector, SparseVector))\n",
+    "    else vector,\n",
     "    ArrayType(FloatType())\n",
     ")\n",
     "\n",
