--- a/nb_cloud_execution.ipynb
+++ b/nb_cloud_execution.ipynb
@@ -73,15 +73,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spark\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -198,7 +189,7 @@
     "    for layer in model.layers:\n",
     "        layer.trainable = False\n",
     "\n",
-    "    new_model = tf.kerras.Model(\n",
+    "    new_model = tf.keras.Model(\n",
     "        inputs=model.input,\n",
     "        outputs=model.layers[-2].output\n",
     "        )\n",
@@ -253,7 +244,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 : Feature extraction :"
+    "# 3 : Feature extraction :\n",
+    "- Using model MobileNetV2 trained on imagenet dataset to extract the features of the fruits images"
    ]
   },
   {
@@ -389,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 : Checking correct save format :"
+    "## 5.2 : Checking correct save format and saving it to csv:\n"
    ]
   },
   {
@@ -416,6 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initial feature shape\n",
     "df.loc[0, \"features\"].shape\n"
    ]
   },
@@ -425,6 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reduced feature shape\n",
     "df.loc[0, \"reduced_features\"].shape\n"
    ]
   },
@@ -453,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
