added csv feature (pandas will save df as csv for ease of sharing)

--- a/nb_aws_spark.ipynb
+++ b/nb_aws_spark.ipynb
@@ -22,6 +22,7 @@
     "PATH = \"s3a://ds-p8\"\n",
     "PATH_DATA = PATH + \"/data\"\n",
     "PATH_RESULT = PATH + \"/Results\"\n",
+    "PATH_CSV = PATH + \"/csvs\"\n",
     "\n",
     "k_components = 138\n",
     "\n",
@@ -381,7 +382,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 : Checking correct save format and saving it to csv:\n"
+    "## 5.2 : Checking correct save format and saving it to csv:\n",
+    "- csv provides a single file, easier to share"
    ]
   },
   {
@@ -427,7 +429,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shows the initial shape of the features and the reduced features via PCA"
+    "Shows the initial shape of the features and the reduced features via PCA\n",
+    "<hr><br>\n",
+    "to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving as csv :\n",
+    "df.to_csv(path_or_buf=f\"{PATH_CSV}/results_fruits.csv\", index=False, sep=\",\")\n"
    ]
   }
  ],
